finished color buttons and admin panel, also some other styling, pushing to see on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,39 +1,8 @@
 
-/* team styles */
-.sea {
-  color: #47fc00;
-  border-color:  #00ff09;
-}
 
-.sea:hover {
-  background: #22ff00;
-}
-
-.phi {
-  color: #BBC2CA;
-  border-color:  #BBC2CA;
-}
-
-.phi:hover {
-  background: #BBC2CA;
-}
-
-.lar {
-  color: #BEA771;
-  border-color:  #BEA771;
-}
-
-.lar:hover {
-  background: #BEA771;
-}
-
-.nos {
-  color: #eae719;
-  border-color:  #00ff09;
-}
-
-.nos:hover {
-  background: #eae719;
+.pick-status {
+  margin-top: 3px;
+  font-size: 12px;
 }
 
 .delete-pick {
@@ -45,6 +14,9 @@
   background: #ff0000;
 }
 
+.small-logo {
+  width: 40px;
+}
 
 .cool-div {
   width: 90%;
@@ -78,7 +50,7 @@
   -moz-border-radius: 5;
   border-radius: 5px;
   font-size: 13px;
-  border: solid 1px;
+  border: solid 2px;
   margin-left: 10px;
   text-decoration: none;
 
@@ -243,3 +215,185 @@
   }
   }
 }
+
+
+
+/* team styles */
+
+.atlantafalcons {
+  color: #A6192E;
+  border-color:  #A6192E;
+}
+
+.atlantafalcons:hover {
+  background: #A6192E;
+}
+
+.baltimoreravens {
+  color:  #D0B240;
+  border-color:  #D0B240;
+}
+
+.baltimoreravens:hover  {
+  background: #D0B240;
+}
+
+.carolinapanthers {
+  color:  #0085CA;
+  border-color:   #0085CA;
+}
+
+.carolinapanthers:hover  {
+  background:  #0085CA;
+}
+
+.dallascowboys {
+  color:  #7F9695;
+  border-color: #7F9695;
+}
+
+.dallascowboys:hover  {
+  background: #7F9695;
+}
+
+.detroitlions {
+  color: #0069B1;
+  border-color: #0069B1;
+}
+
+.detroitlions:hover  {
+  background: #0069B1;
+}
+
+.greenbaypackers {
+  color:  #175E33;
+  border-color:  #175E33;
+}
+
+.greenbaypackers:hover  {
+  background:  #175E33;
+}
+
+.jacksonvillejaguars {
+  color:  #006073;
+  border-color:  #006073;
+}
+
+.jacksonvillejaguars:hover  {
+  background:  #006073;
+}
+
+.houstontexans {
+  color: #A6192E;
+  border-color: #A6192E;
+}
+
+.houstontexans:hover  {
+  background: #A6192E;
+}
+
+.kansascitychiefs {
+  color: #C8102E;
+  border-color: #C8102E;
+}
+
+.kansascitychiefs:hover  {
+  background: #C8102E;
+}
+
+.losangeleschargers {
+  color: #0072CE;
+  border-color: #0072CE;
+}
+
+.losangeleschargers:hover  {
+  background: #0072CE;
+}
+
+.losangelesrams {
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+
+.losangelesrams:hover  {
+  background: #FFFFFF;
+}
+
+.newenglandpatriots {
+  color: #C8102E;
+  border-color: #C8102E;
+}
+
+.newenglandpatriots:hover  {
+  background: #C8102E;
+}
+
+.minnesotavikings {
+  color: #FFC62F;
+  border-color: #FFC62F;
+}
+
+.minnesotavikings:hover  {
+  background: #FFC62F;
+}
+
+.neworleanssaints {
+  color: #D3BC8D;
+  border-color: #D3BC8D;
+}
+
+.neworleanssaints:hover  {
+  background: #D3BC8D;
+}
+
+.pittsburgsteelers {
+  color: #FFB81C;
+  border-color: #FFB81C;
+}
+
+.pittsburgsteelers:hover  {
+  background: #FFB81C;
+}
+
+.philadelphiaeagles {
+  color: #869397;
+  border-color: #869397;
+}
+
+.philadelphiaeagles:hover  {
+  background: #869397;
+}
+
+.oaklandraiders {
+  color: #A5ACAF;
+  border-color: #A5ACAF;
+}
+
+.oaklandraiders:hover   {
+  background: #A5ACAF;
+}
+
+.seattleseahawks {
+  color:  #4DFF00;
+  border-color:  #4DFF00;
+}
+
+.seattleseahawks:hover  {
+  background:  #4DFF00;
+}
+
+.tennesseetitans {
+  color:  #4B92DB;
+  border-color:  #4B92DB;
+}
+
+.tennesseetitans:hover  {
+  background:  #4B92DB;
+}
+
+
+
+
+
+
+/* end team styles */
