--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <!-- Page Header -->
-<div class="page-header">
-  <h1>Open Bets <small>Choose wisely</small></h1>
+<div class="page-header jumbo-header">
+  <h1>Open Bets<br> <small>Choose wisely</small></h1>
   <div class="row">
 
   <%= render 'users/status_board' %>
