--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,6 @@
-
+.jumbo-header {
+  margin: 0 0 20px 0;
+}
 
 .pick-status {
   margin-top: 3px;
@@ -73,7 +75,7 @@
 }
 
 .detail-holder {
-  height: 100%;
+  height: 80%;
   text-align: center;
 }
 
