done, decided not really neccessary

--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -86,10 +86,10 @@
         <table class="table">
           <thead>
             <th>ID</th>
-            <th>Matchup Title</th>
-            <th>Username</th>
-            <th>Lock</th>
-            <th>Choice</th>
+            <th><%= sort_link "matchup.title" %></th>
+            <th><%= sort_link "user" %></th>
+            <th><%= sort_link "lock" %></th>
+            <th><%= sort_link "choice" %></th>
             <th>Result</th>
           </thead>
           <tbody>
