--- a/app/views/users/_status_board.html.erb
+++ b/app/views/users/_status_board.html.erb
@@ -4,7 +4,9 @@
 
     <div class="col-md-4 col-sm-12">
       <li class="list-group-item">
-        Points Scored: <span class="badge">10</span>
+        Points Scored/Leader: <span class="badge">
+          <%= current_user.score %> / <%= User.top_score %>
+        </span>
       </li>
     </div>
     <div class="col-md-4 col-sm-12">
