--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               <% if current_user.admin %>
                 <li><%= link_to "Admin", '/admin' %></li>
               <% end %>
-              <li><%= link_to "Settings", edit_user_registration_path  %></li>
+              <li><%= link_to "History", history_path  %></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete  %></li>
             <% else %>
 
