ajax working, want to refactor locks adding and subtracting first becuase they are triggering before the actual delte and create, which caused a mismatch

--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -90,7 +90,7 @@
             <th><%= sort_link "user" %></th>
             <th><%= sort_link "lock" %></th>
             <th><%= sort_link "choice" %></th>
-            <th>Result</th>
+            <th>Win?</th>
           </thead>
           <tbody>
             <% @picks.each do |pick| %>
