tests passing, going to commit and push to PRD. AJAX is working slow, but i think posgressql will fix the issue according to the internet

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,7 +30,7 @@
             <%= matchup.title %>
           </h3>
           <h5>
-            Closes: <%=matchup.pacific_time_display%>
+            Closes: <%=matchup.pacific_time_display%> PST
           </h5>
         </div>
       </div>
