removed rails-ujs and only one request is being sent. will deploy and see but i need to fix the double picks being made in the model for sure anyway

--- a/app/views/picks/create.js.erb
+++ b/app/views/picks/create.js.erb
@@ -1,5 +1,6 @@
 $('.create_pick').bind('ajax:success', function() {
    $(this).closest(".matchup").fadeOut();
+   $(this).addClass('disabled');
    $('#user_lock_points').html('Locks Remaining: <span class="badge"><%= current_user.lock_points %></span>');
    $('#user_unpicked').html('Unpicked Games: <span class="badge"><%= current_user.unpicked_games %></span>');
 });
