added all team logos

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -240,6 +240,15 @@
 
 /* team styles */
 
+.arizonacardinals {
+  color: #97233F;
+  border-color:  #97233F;
+}
+
+.arizonacardinals:hover {
+  background: #97233F;
+}
+
 .atlantafalcons {
   color: #A6192E;
   border-color:  #A6192E;
@@ -258,6 +267,15 @@
   background: #D0B240;
 }
 
+.buffalobills {
+  color:  #C8102E;
+  border-color:  #C8102E;
+}
+
+.buffalobills:hover  {
+  background: #C8102E;
+}
+
 .carolinapanthers {
   color:  #0085CA;
   border-color:   #0085CA;
@@ -267,6 +285,24 @@
   background:  #0085CA;
 }
 
+.chicagobears {
+  color:  #DC4405;
+  border-color:  #DC4405;
+}
+
+.chicagobears:hover  {
+  background:  #DC4405;
+}
+
+.clevelandbrowns {
+  color:  #EB3300;
+  border-color:  #EB3300;
+}
+
+.clevelandbrowns:hover  {
+  background:  #EB3300;
+}
+
 .dallascowboys {
   color:  #7F9695;
   border-color: #7F9695;
@@ -274,6 +310,15 @@
 
 .dallascowboys:hover  {
   background: #7F9695;
+}
+
+.denverbroncos {
+  color:  #FC4C02;
+  border-color: #FC4C02;
+}
+
+.denverbroncos:hover  {
+  background: #FC4C02;
 }
 
 .detroitlions {
@@ -312,6 +357,15 @@
   background: #A6192E;
 }
 
+.indianapoliscolts {
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+
+.indianapoliscolts:hover  {
+  background: #FFFFFF;
+}
+
 .kansascitychiefs {
   color: #C8102E;
   border-color: #C8102E;
@@ -337,6 +391,15 @@
 
 .losangelesrams:hover  {
   background: #FFFFFF;
+}
+
+.miamidolphins {
+  color: #F58220;
+  border-color: #F58220;
+}
+
+.miamidolphins:hover  {
+  background: #F58220;
 }
 
 .newenglandpatriots {
@@ -410,6 +473,43 @@
 .tennesseetitans:hover  {
   background:  #4B92DB;
 }
+
+.newyorkgiants {
+  color:  #A6192E;
+  border-color:  #A6192E;
+}
+
+.newyorkgiants:hover  {
+  background:  #A6192E;
+}
+
+.newyorkjets {
+  color:  #FFFFFF;
+  border-color:  #FFFFFF;
+}
+
+.newyorkjets:hover  {
+  background:  #FFFFFF;
+}
+
+.sanfrancisco49ers {
+  color: #B3995E;
+  border-color: #B3995E;
+}
+
+.sanfrancisco49ers:hover  {
+  background: #B3995E;
+}
+
+.tampabaybuccaneers {
+  color: #FF8200;
+  border-color: #FF8200;
+}
+
+.tampabaybuccaneers:hover  {
+  background: #FF8200; 
+}
+
 
 
 
