--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -507,7 +507,16 @@
 }
 
 .tampabaybuccaneers:hover  {
-  background: #FF8200; 
+  background: #FF8200;
+}
+
+.washingtonredskins {
+  color: #FFC20F;
+  border-color: #FFC20F;
+}
+
+.washingtonredskins:hover  {
+  background: #FFC20F;
 }
 
 
