--- a/app/views/matchups/new.html.erb
+++ b/app/views/matchups/new.html.erb
@@ -5,15 +5,18 @@
     </div>
     <div class="col-md-6">
       <%= simple_form_for(@matchup, html: { class: 'form-horizontal' }) do |f| %>
-        <%= f.input :title %>
-        <%= f.input :home_team %>
-        <%= f.input :home_line %>
-        <%= f.input :home_detail %>
-        <%= f.input :home_picture %>
-        <%= f.input :away_team %>
+      <%= f.input :title, collection: ["Thursday Night", "Saturday Morning",
+                                        "Saturday Afternoon","Saturday Night",
+                                        "Sunday Morning", "Sunday Night",
+                                        "Sunday Afternoon", "Monday Night"] %>
+        <%= f.input :away_team,collection: @teams %>
         <%= f.input :away_line %>
         <%= f.input :away_detail %>
         <%= f.input :away_picture %>
+        <%= f.input :home_team,collection: @teams %>
+        <%= f.input :home_line %>
+        <%= f.input :home_detail %>
+        <%= f.input :home_picture %>
         <%= f.input :closing_time, label: 'Closing Time (UTC Timezone):' %>
         <%= f.button :submit %>
       <% end %>
