--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,11 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= x %> </th>
-          <td><%= link_to user.username, user %></td>
+          <td><%= link_to user.username, user %>
+              <% user.championships.times do %>
+                <span class="ion-trophy"></span>
+              <% end %>
+          </td>
           <td><%= user.score %></td>
           <td><%= user.lock_points %></td>
         </tr>
